--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,4 @@
 [system]
 dataSource = root:123456@tcp(10.0.0.1:3306)/jyksServer?charset=utf8mb4&parseTime=True&loc=Local
 redisStr=redis://:123456@10.0.0.1:12138/3?dial_timeout=3&db=1&read_timeout=6s&max_retries=2
+jwtSecret=test
