--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,6 @@
 [system]
-dataSource = root:123456@tcp(10.0.0.1:3306)/ginStudy?charset=utf8mb4&parseTime=True&loc=Local
-redisStr=redis://:123456@10.0.0.1:12138/3?dial_timeout=3&db=1&read_timeout=6s&max_retries=2
-jwtSecret=test
+;dataSource = root:123456@tcp(10.0.0.1:3306)/ginStudy?charset=utf8mb4&parseTime=True&loc=Local
+dataSource = root:123456@tcp(mydb:3306)/ginStudy?charset=utf8&parseTime=True&loc=Local
+;redisStr=redis://:123456@10.0.0.1:12138/3?dial_timeout=3&db=1&read_timeout=6s&max_retries=2
+redisStr=redis://@redis:6379/3?dial_timeout=3&db=1&read_timeout=6s&max_retries=2
+jwtSecret=password
